<resources>
    <string name="app_name">Shared Services</string>
    <string name="app_version">Version 1.3.0</string>
    <string name="app_copy">© 2016 Shared Services</string>

    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>

    <string name="car">Car</string>
    <string name="car_add">Add Car</string>
    <string name="car_search">Search Car</string>
    <string name="car_profile">Profile Car</string>
    <string name="car_complete">Car complete</string>
    <string name="car_pending">Car pending</string>

    <string name="download">Download</string>
    <string name="download_add">Add Download</string>
    <string name="download_search">Search Download</string>
    <string name="download_profile">Profile Download</string>
    <string name="download_complete">Download complete</string>
    <string name="download_pending">Download pending</string>

    <string name="event">Event</string>
    <string name="event_add">Add Event</string>
    <string name="event_search">Search Event</string>
    <string name="event_profile">Profile Event</string>
    <string name="event_complete">Event complete</string>
    <string name="event_pending">Event pending</string>

    <string name="paper">Paper</string>
    <string name="paper_profile">Profile Paper</string>

    <string name="profile">Profile</string>
    <string name="box">Box</string>
    <string name="boxUser">Box Users</string>
    <string name="notify">Notify</string>
    <string name="name">Name</string>
    <string name="name_err">Enter the name</string>
    <string name="size">Size</string>
    <string name="size_err">Enter the size value min 2 Go</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="login_link">Already registered!! Login Me.</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_link">Not a member?? Sign up now.</string>
    <string name="email">Email</string>
    <string name="email_err">Enter valid email address</string>
    <string name="password">Password</string>
    <string name="password_err">Enter the password</string>
    <string name="fname">First name</string>
    <string name="fname_err">Enter the first name</string>
    <string name="lname">Last name</string>
    <string name="lname_err">Enter the last name</string>
    <string name="hint_date">yyyy-mm-dd</string>
    <string name="hint_time">hh-mm</string>
    <string name="phone">Phone number</string>
    <string name="phone_err">Enter the phone number</string>
    <string name="driver">Driver license</string>
    <string name="driverOn">I have a driving license</string>
    <string name="driverOff">I do not have a driving license</string>
    <string name="about">About</string>
    <string name="networkunvalid">Network is unavailable !!</string>
    <string name="serverunvalid">Server is unavailable !!</string>
    <string name="empty_fields_link">Empty fields !!</string>
    <string name="demand">Demand</string>
    <string name="complete">Complete</string>
    <string name="model">Model</string>
    <string name="model_err">Enter the model of car</string>
    <string name="description">Description</string>
    <string name="description_err">Enter the description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="going">Going</string>
    <string name="going_coming">Going and Coming</string>
    <string name="highway">Highway</string>
    <string name="highway_not">Not Highway</string>
    <string name="place">Place</string>
    <string name="place_err">Enter the number of places between 1 and 8</string>
    <string name="vote">Vote</string>
    <string name="spv">Service point of voting</string>
    <string name="chv">Click here to vote !!</string>

    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/car</item>
        <item>@string/download</item>
        <item>@string/event</item>
        <item>@string/paper</item>
        <item>@string/profile</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Girl</item>
        <item>Male</item>
    </string-array>
</resources>
