<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Name_etxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textCapWords"
                android:singleLine="true"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/City_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
            <Spinner
                android:id="@+id/City_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/Date_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="18dp"
            android:gravity="center"
            android:hint="@string/hint_date"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/Download_swt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="18dp"
            android:textColor="@color/red"
            android:text="@string/download_pending"
            android:textOff="@string/download_pending"
            android:textOn="@string/download_complete"
            app:showText="false"/>

        <Button
            android:id="@+id/Search_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/search"
            android:textColor="@color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/Download_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>