<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <it.mdev.sharedservices.design.CircularImageView
                android:id="@+id/Download_iv"
                android:layout_width="108dp"
                android:layout_height="108dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/red"
                android:layout_gravity="center"
                android:src="@drawable/download"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Name_etxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textCapWords"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Size_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Size_etxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/City_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">
                <Spinner
                    android:id="@+id/City_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </android.support.v7.widget.Toolbar>

            <Button
                android:id="@+id/Add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dip"
                android:text="@string/add"
                android:textAllCaps="false"
                android:background="@color/red"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/Empty_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/empty_fields_link"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="17sp" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>